- Added: Server admin can set a default value for client side checkbox "automatically reduce view distance at maintarget" still false for TT and true otherwise, by longtimegamer
- Added: AI awareness and aggressive fire is only activated when d_mt_spotted is true, by longtimegamer
- Changed: Side mission bonus vehicles are no longer selected consecutively
- Changed: Recruit terminal in Altis Blufor version moved closer to spawn point
- Changed: You have to take barracks and vehicle MHQs in the Unsung version instead of destroying them 
- Fixed: If d_with_ranked was set to 2 (Ranked mode on but weapons not ranked) d_remove_from_arsenal was not processed
- Fixed: Main target mission buildings got destroyed 30 seconds after creation
- Fixed: Snipers were not being created with new dynamic parameter
- Fixed: HUD with duplicated character "Score::"
- Fixed: Vehicle markers are not shown when player AI is alone in vehicles
- Fixed: When AI aggressive shoot (d_ai_aggressiveshoot) was activated AI was shooting at unconscious players
- Fixed: No sidemission bonus vehicles were awarded in the TT version
- Fixed: TT points were broadcasted before the variables were created on the server
- Fixed: JIP was disabled for remoteExecCall functions which make use for JIP
- Fixed: In the SOG PF version capturing of barracks and vehicle MHQ continued even if nearby players were dead (d_bar_mhq_destroy = 0)
- Fixed: Moving mousewheel when looking at a friendly vehicle or when a player was inside a vehicle didn't show the crew anymore
- Fixed: It could happen that already respawned vehicles were still drawn on the map
- Fixed: Marked for death never failed when target was killed, vip defend map icon in wrong place, by longtimegamer
- Fixed: Some cargo containers have building positions but can't be opened resulting in AI stuck inside (occupy buildings)
- Optimized: Do not spawn commander in AI vehicles
- Optimized: Make use of new 2.06 scripting commands where possible