@@ -208,3 +208,6 @@ STR_DOM_MISSIONSTRING_SUPPRESS_VOICES
 STR_DOM_MISSIONSTRING_2084
 STR_DOM_MISSIONSTRING_2085
 STR_DOM_MISSIONSTRING_2086
+STR_DOM_MISSIONSTRING_2087
+STR_DOM_MISSIONSTRING_2088
+STR_DOM_MISSIONSTRING_2089
